# TC_DMP_constrainedVelAcc

./: DMP.m  NoTemporalCoupling.m  README.md  TemporalCouplingNoPotentials.m  plot_result.m
catkin_ws/src/CRIS_lab/robot_ctrl/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/CRIS_lab/robot_ctrl/config/: clik_default.yaml
catkin_ws/src/CRIS_lab/robot_ctrl/launch/: clik_bringup.launch  joint_ctrl_bringup.launch
catkin_ws/src/CRIS_lab/robot_ctrl/msg/: CtrlTarget.msg
catkin_ws/src/CRIS_lab/robot_ctrl/nodes/: clik_node  vel_ff_pos_fb_node
catkin_ws/src/CRIS_lab/robot_interface/: CMakeLists.txt  package.xml
catkin_ws/src/CRIS_lab/robot_interface/config/: ur10_default_eectrl_params.yaml  ur10_default_jctrl_params.yaml
catkin_ws/src/CRIS_lab/robot_interface/launch/: ur10_interface_bringup.launch
catkin_ws/src/CRIS_lab/robot_interface/msg/: RobotState.msg
catkin_ws/src/CRIS_lab/robot_interface/nodes/: ur10_interface_node
catkin_ws/src/CRIS_lab/robot_interface/rviz/: ur10.rviz
catkin_ws/src/experiment_dmp_tc/: CMakeLists.txt  package.xml
catkin_ws/src/experiment_dmp_tc/bagfiles/: no_tc_sim.bag  no_tc_sim_kp1.bag  no_tc_sim_kp3.bag  no_tc_sim_kp4.bag  no_tc_sim_kp5.bag  tc_sim.bag
catkin_ws/src/experiment_dmp_tc/config/: no_tc.yaml  tc.yaml  ur10_calibration.csv  ur10_omega_trajectory.csv
catkin_ws/src/experiment_dmp_tc/launch/: bringup.launch  init.launch  run_experiment.launch  start.launch
catkin_ws/src/experiment_dmp_tc/scripts/: calibration_experiment.py  initialize.py
catkin_ws/src/fmauch_universal_robot/ur10_e_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
catkin_ws/src/fmauch_universal_robot/ur10_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
catkin_ws/src/fmauch_universal_robot/ur3_e_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
catkin_ws/src/fmauch_universal_robot/ur3_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
catkin_ws/src/fmauch_universal_robot/ur5_e_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
catkin_ws/src/motion_planning/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/motion_planning/msg/: DMPState.msg  TrajGenState.msg
catkin_ws/src/motion_planning/nodes/: dmp_node  traj_scaling_node
catkin_ws/src/motion_planning/src/motion_planning/dmp/: __init__.py  dmp.py  temporal_coupling.py
catkin_ws/src/motion_planning/src/motion_planning/online_traj_scaling/: __init__.py  example.yaml  gmr_oa.py  trajectory_generator.py
matlab/: TemporalCoupling.m  TemporalCouplingNoPotentials.m  main.m  run_simulation.m
trajectories/: g.mat  omega.mat  psi.mat  s.mat  z.mat
(+3 files in other folders)
