<?xml version="1.0"?>
<package format="2">
  <name>experiment_dmp_tc</name>
  <version>0.0.0</version>
  <description>The experiment_dmp_tc package</description>
  <maintainer email="albin.dahlin@chalmers.se">albin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
